Hot fix on drop down to fix elements overlap

--- a/src/index.scss
+++ b/src/index.scss
@@ -207,6 +207,7 @@ hr {
   border-radius: $border-radius;
   padding: 1rem;
   overflow: hidden;
+  z-index: 100;
 
   transition: height $speed ease;
 
